[package]
name = "timer"
version = "0.1.0"
authors = ["Greg Manning <1396183+tocklime@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "0.7"
wasm-bindgen = "^0.2.50"
js-sys = "0.3.39"
itertools = "0.9.0"
#serde_dhall = { git = "https://github.com/Nadrieril/dhall-rust", branch = "wasm" }
serde = "1.0"
csv = "1.1"