[package]
name = "timer"
version = "0.1.0"
authors = ["Greg Manning <1396183+tocklime@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.7.0"
wasm-bindgen = "^0.2.50"
js-sys = "^0.3.40"
itertools = "^0.9.0"
lazy_static = "^1.4.0"
serde_dhall = "^0.5.3" 
serde_json = "1.0.56"
serde = "^1.0.111"
csv = "^1.1.3"
mqtt-protocol = "^0.8.1"
ulid = { version = "0.4.0", features = ["serde"]}
chrono = "0.4.15"
pwbox = { version = "0.3.0", features = ["pure"]}

[dependencies.web-sys]
version = "^0.3.40"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]